# safer-prompt-toolkit

./: README.md  safer_prompt_toolkit.py  setup.cfg
src/safer_prompt_toolkit/: __init__.py  _extra_prompt_toolkit_utilities.py  _safer_prompt_toolkit.py
tests/: tests.py
