[metadata]
name = safer_prompt_toolkit
version = 1.5
author = Lior Avrahami
description = a wrapper to prompt-toolkit, designed to provide a fallback for some of prompt-toolkit's functionality when operating from a place where prompt-toolkit can't run
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LiorAvrahami/safer-prompt-toolkit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0
install_requires =
    docutils
    prompt_toolkit >=3.0

[options.packages.find]
where = src